🐛 Fix navigation wonkiness when dismissing zoom
This commit will kind of fix the dismissing zoomed image problem by
replacing the history.back() with replaceState().  Something with Turbo
seems to be interfering.  The history is a nice to have for mobile users
since you can swipe back to dismiss the zoomed image.  Added a
scrollbar-gutter: stable to help prevent layout shifting.

--- a/app/assets/stylesheets/arclight.scss
+++ b/app/assets/stylesheets/arclight.scss
@@ -544,6 +544,7 @@ html[data-bs-theme=dark] {
 
 body.zoom-active {
   overflow: hidden;
+  scrollbar-gutter: stable;
 }
 
 @media (max-width: 768px) {
